<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/settings_group">
        <item
            android:id="@+id/settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/tab_settings" />
    </group>
    <item
        android:id="@+id/event_data"
        android:icon="@drawable/floppy2"
        android:title="@string/event_data">
        <menu>
            <item
                android:id="@+id/export_pdf"
                android:title="@string/export_pdf" />
            <item
                android:id="@+id/export_csv"
                android:title="@string/export_csv" />
            <item
                android:id="@+id/backup_events"
                android:title="@string/backup" />
            <item
                android:id="@+id/restore_events"
                android:title="@string/restore" />
            <group android:id="@+id/clear">
                <item
                    android:id="@+id/clear_events"
                    android:icon="@drawable/x_circle"
                    android:title="@string/clear_events" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/medicine_data"
        android:title="@string/medicine_data">
        <menu>
            <item
                android:id="@+id/medicine_backup"
                android:title="@string/backup" />
            <item
                android:id="@+id/restore_medicine_backup"
                android:title="@string/restore" />
        </menu>
    </item>
    <item
        android:id="@+id/generate_test_data"
        android:icon="@drawable/x_circle"
        android:title="@string/generate_test_data" />
    <group android:id="@+id/information">
        <item
            android:id="@+id/version"
            android:icon="@drawable/info_circle"
            android:title="@string/app_version" />
        <item
            android:id="@+id/app_url"
            android:icon="@drawable/link"
            android:title="@string/app_url" />
    </group>
</menu>