<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditTextPreference
        app:key="stock_threshold"
        app:title="@string/reminder_threshold" />
    <ListPreference
        app:entries="@array/stock_reminder"
        app:entryValues="@array/values_0_to_2"
        app:key="stock_reminder"
        app:title="@string/out_of_stock_reminder"
        app:useSimpleSummaryProvider="true" />
    <ListPreference
        app:entries="@array/expiration_reminder"
        app:entryValues="@array/values_0_and_1"
        app:key="expiration_reminder"
        app:title="@string/expiration_reminder"
        app:useSimpleSummaryProvider="true" />
    <EditTextPreference
        app:key="expiration_days_before"
        app:title="@string/remind_days_before_expiration" />
    <PreferenceCategory app:title="@string/medicine_stock">
        <Preference app:key="medicine_stock" app:title="@string/amount" app:selectable="false"/>
        <Preference app:key="medicine_expiration_date" app:title="@string/expiration_date" app:selectable="false"/>
        <Preference app:key="edit_medicine_stock_settings" app:title="@string/edit_medicine_stock_settings" app:icon="@drawable/box_seam"/>
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>