<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        android:title="Reminder status"
        app:key="reminder_status" />
    <Preference
        android:title="@string/instructions_label"
        app:key="instructions" />
    <PreferenceCategory
        app:key="interval_category"
        app:title="@string/interval_based_reminder">
        <Preference
            android:title="@string/interval"
            app:key="interval" />
        <Preference
            android:title="Interval type"
            app:key="interval_type" />
        <ListPreference
            android:title="Interval start"
            app:key="interval_start"
            android:entries="@array/interval_start"
            android:entryValues="@array/values_0_and_1"/>
    </PreferenceCategory>
    <PreferenceCategory
        app:key="cycle_category"
        app:title="@string/cycle_reminders">
        <Preference
            app:key="cycle_start_date"
            app:title="@string/cycle_start_date" />
        <EditTextPreference
            app:key="cycle_consecutive_days"
            app:title="@string/cycle_consecutive_days" />
        <EditTextPreference
            app:key="cycle_pause_days"
            app:title="@string/cycle_pause_days" />
    </PreferenceCategory>
    <PreferenceCategory
        app:key="time_based_category"
        app:title="@string/time_based_reminder">
        <MultiSelectListPreference
            app:key="remind_on_weekdays"
            app:title="@string/remind_on"
            app:entries="@array/days"
            app:entryValues="@array/one_to_seven" />
        <MultiSelectListPreference
            app:key="remind_on_days"
            app:title="@string/remind_on"
            app:entries="@array/days_of_month"
            app:entryValues="@array/days_of_month"/>
            />
    </PreferenceCategory>
    <PreferenceCategory app:title="Further settings">
        <SwitchPreferenceCompat
            android:title="@string/variable_amount"
            app:key="variable_amount" />
        <SwitchPreferenceCompat
            android:title="@string/automatically_taken"
            app:key="automatically_taken" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>