<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:title="@string/big_notifications"
        app:key="big_notifications" />
    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:summary="@string/use_relative_date_time_summary"
        android:title="@string/use_relative_date_time"
        app:key="use_relative_date_time" />
    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:title="Use system locale for date/time format"
        app:key="system_locale"
        app:summary="If switched off, the app uses the locale set for the app."/>

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/theme_entries_titles"
        android:entryValues="@array/values_0_and_1"
        android:title="@string/theme"
        app:key="theme"
        app:useSimpleSummaryProvider="true" />
</androidx.preference.PreferenceScreen>