<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <SwitchPreferenceCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="false"
        app:key="weekend_mode"
        app:title="@string/weekend_mode" />
    <MultiSelectListPreference
        app:defaultValue="@array/default_weekend_days"
        app:entries="@array/days"
        app:entryValues="@array/one_to_seven"
        app:key="weekend_days"
        app:title="@string/weekend_mode_days" />
    <Preference
        android:defaultValue="540"
        app:key="weekend_time"
        app:title="@string/time" />

</androidx.preference.PreferenceScreen>