<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="window_flag_secure"
        android:title="@string/block_screen_capture"
        android:singleLineTitle="false"
        app:singleLineTitle="false"/>
    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:enabled="false"
        android:key="app_authentication"
        android:title="@string/app_authentication"
        app:singleLineTitle="false"/>
    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="hide_med_name"
        android:title="@string/hide_med_name"
        app:singleLineTitle="false"/>
</androidx.preference.PreferenceScreen>