<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/medicineName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medicine_name" />

        <TextView
            android:id="@+id/medicineDates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/production_date" />

        <TextView
            android:id="@+id/medicineNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notes" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <TextView
            android:id="@+id/reminderText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="4dp"
            android:text="@string/reminder_status"
            app:drawableStartCompat="@drawable/calendar_event" />


    </LinearLayout>

</ScrollView>