<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/editIntervalGroup"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editIntervalTimeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/interval">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editIntervalTime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberSigned" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/intervalUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:checkedButton="@id/intervalHours"
        app:selectionRequired="true"
        app:singleSelection="true">

        <Button
            android:id="@+id/intervalMinutes"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minutes_string" />

        <Button
            android:id="@+id/intervalHours"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hours_string" />

        <Button
            android:id="@+id/intervalDays"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days_string" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

</LinearLayout>